# NNS

./: .clang-format  .gitignore  CMakeLists.txt  DESCRIPTION  README.md  setup_r.py
R/: ARMA.R  ARMA_optim.R  Central_tendencies.R  Multivariate_Regression.R  NNS_MC.R  NNS_meboot.R  SD_Cluster.R
doc/: NNSvignette_Sampling.Rmd  NNSvignette_Sampling.html
docs/: agenda.md
examples/: Partial Moments Equivalences.md  README.md  index.md  tides.html
include/NNS/: fast_lm.h  partial_moments.h  partial_moments_omp.hpp
include/NNS/algorithms/: central_tendencies.hpp  partial_moments.hpp
include/NNS/core/: common.hpp  ndarray.hpp
legacy/: .travis.yml  DESCRIPTION  NAMESPACE  README.md
legacy/R/: ANOVA.R  ARMA.R  ARMA_optim.R  Binary_ANOVA.R  Boost.R  Causal_matrix.R  Causation.R  Central_tendencies.R  Copula.R  Dependence.R  Dependence_matrix.R  FSD.R  Internal_Functions.R  Multivariate_Regression.R  NNS-package.R  NNS_Distance.R  NNS_MC.R  NNS_VAR.R  NNS_meboot.R  NNS_term_matrix.R  Normalization.R  Nowcast.R  Numerical_Differentiation.R  Partial_Moments.R  Partition_Map.R  RcppExports.R  Regression.R  SD_Cluster.R  SD_Efficient_Set.R  SSD.R  Seasonality_Test.R  Stack.R  TSD.R  Uni_Causation.R  Uni_SD_Routines.R  dy_d_wrt.R  dy_dx.R  gvload.R
legacy/doc/: NNSvignette_Classification.Rmd  NNSvignette_Classification.html  NNSvignette_Clustering_and_Regression.html  NNSvignette_Correlation_and_Dependence.R  NNSvignette_Correlation_and_Dependence.html  NNSvignette_Forecasting.R  NNSvignette_Forecasting.Rmd  NNSvignette_Partial_Moments.R  NNSvignette_Sampling.R  NNSvignette_Sampling.Rmd
legacy/examples/: 7_Econometic_Reasons.html  Bias_and_CI.html  Boston_Housing.html  Causal_Inference_Amongst_Macroeconomic_Variables_Using_NNS.html  Curve_Fitting.html  DatasaurusDozen.html  Logistic_Comparison.html  NNS_correlation_and_dependence.html  PWT.html  Partial Moments Equivalences.md  README.md  Regression_Residuals.html  Sunspots_example.html  Time_Series_Classification.html  Time_Series_Classification_Expanded.html  VAR_example.html  index.md  prophet_NNS_comparison.html  tides.html  xgboost_example.html
legacy/man/: LPM.ratio.Rd  NNS.ANOVA.Rd  NNS.ARMA.Rd  NNS.ARMA.optim.Rd  NNS.CDF.Rd  NNS.FSD.Rd  NNS.FSD.uni.Rd  NNS.MC.Rd  NNS.Rd  NNS.SD.cluster.Rd  NNS.SD.efficient.set.Rd  NNS.SSD.Rd  NNS.SSD.uni.Rd  NNS.TSD.Rd  NNS.TSD.uni.Rd  NNS.VAR.Rd  NNS.boost.Rd  NNS.caus.Rd  NNS.copula.Rd  NNS.dep.Rd  NNS.diff.Rd  NNS.distance.Rd  NNS.gravity.Rd  NNS.meboot.Rd  NNS.mode.Rd  NNS.moments.Rd  NNS.norm.Rd  NNS.nowcast.Rd  NNS.part.Rd  NNS.reg.Rd  NNS.rescale.Rd  NNS.seas.Rd  NNS.stack.Rd  NNS.term.matrix.Rd  NNS_bin.Rd  dy.d_.Rd
legacy/src/: RcppExports.cpp  central_tendencies.cpp  central_tendencies.h  fast_lm.cpp  partial_moments.cpp  partial_moments.h  partial_moments_rcpp.cpp  partial_moments_rcpp.h
legacy/tests/: testthat.R
legacy/tests/testthat/: test_ANOVA.R  test_Copula.R  test_FSD_SSD_TSD.R  test_Partial_Moments.R  test_Partition_Map.R  test_SD_efficient_Set.R  test_Uni_SD_Routines.R
legacy/vignettes/: NNSvignette_Classification.R  NNSvignette_Clustering_and_Regression.R  NNSvignette_Clustering_and_Regression.Rmd  NNSvignette_Comparing_Distributions.R  NNSvignette_Comparing_Distributions.Rmd  NNSvignette_Comparing_Distributions.html  NNSvignette_Correlation_and_Dependence.Rmd  NNSvignette_Forecasting.html  NNSvignette_Partial_Moments.Rmd  NNSvignette_Partial_Moments.html  NNSvignette_Sampling.html
man/: NNS.MC.Rd  NNS.SD.cluster.Rd  NNS.meboot.Rd  NNS.rescale.Rd
src/: Makevars  fast_lm.cpp  fast_lm.h  partial_moments_rcpp.cpp
test/: CMakeLists.txt  RInsideGlobal.h  main.cpp  test_central_tendencies.cpp  test_common.cpp  test_fast_lm.cpp  test_partial_moments.cpp  test_partial_moments_omp.cpp  test_sample.cpp
test/against_legacy/: CMakeLists.txt
test/against_legacy/test/: rinside.hpp  test_al_partial_moments.cpp
test/test/: main.cpp  test_common.cpp  test_partial_moments_omp.cpp
vignettes/: NNSvignette_Comparing_Distributions.html  NNSvignette_Sampling.R  NNSvignette_Sampling.html
